@@ -7,13 +7,17 @@ Bundled the Kotlin runtime library (v1.21) with LazyLib:
    bindings are provided in the org.lazywizard.lazylib.ext package
 Added @Nullable annotations where appropriate
 Added org.lazywizard.lazylib.ui.FontLoader:
- - load bitmap fonts with loadFont(String path)
+ - load bitmap fonts with loadFont(String fontPath)
 Added org.lazywizard.lazylib.ui.LazyFont:
  - Represents a bitmap font (the same type Starsector itself uses)
  - Use drawText() for text that is updated every frame (not recommended!)
  - Use createText() to create a reusable DrawableString, which can draw a
-   section of text repeatedly and very efficiently
+   block of text repeatedly and very efficiently
  - See the Console mod for example usage; more examples will be provided soon
+Changes to MathUtils:
+ - Added getPoint(Vector2f center, float radius, float angle). This acts as an
+   alias for the existing getPointOnCircumference(), which is both the most
+   commonly used method in LazyLib as well as one of the most awkwardly named
 Removed from SimpleEntity:
  - Removed Object constructor (it used reflection, which is now blocked;
    remaining options are Vector2f, WeaponAPI, and ShipEngineAPI)
